// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TSupermarketBase
message TSupermarketBase
{	
	
	
	repeated TSupermarketDefine TSupermarket = 1; // TSupermarket

}

// Defined in table: TSupermarket
message TSupermarketDefine
{	
	
	
	optional uint32 Id = 1; // ID
	
	
	optional uint32 ItemId = 2; // 道具ID
	
	
	optional uint32 Num = 3; // 道具数量
	
	
	optional uint32 Odds = 4; // 获得概率（百分位）
	
	
	optional string Show = 5; // 出现行数

}

